--- a/public/Art gallery.html
+++ b/public/Art gallery.html
@@ -9,7 +9,7 @@
     <h1>Welcome to My Ai Art Gallery!</h1>
    
     
-    <img src="../assets/images/_Art ID_IP2_0006.jpg" 
+    <img src="../assets/images/anime-dragon-ball-dragon-ball-z-krillin-wallpaper-preview.jpg" 
     width="400"
     <hr />
     <hr />
