--- a/public/Art gallery.html
+++ b/public/Art gallery.html
@@ -6,10 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Welcome to My Ai Art Gallery!</h1>
+    <h1>Welcome to My Art Gallery!</h1>
    
     
-    <img src="../assets/images/anime-dragon-ball-dragon-ball-z-krillin-wallpaper-preview.jpg" 
+    <img src="../assets/images/_Art ID_IP2_0006.jpg" 
     width="400"
     <hr />
     <hr />
