--- a/public/Art gallery.html
+++ b/public/Art gallery.html
@@ -10,7 +10,7 @@
    
     
     <img src="../assets/images/_Art ID_IP2_0006.jpg" 
-    width="400"
+    width="400" height="400" alt="abstract digital painting of temple in bali"/>
     <hr />
     <hr />
     
