--- a/public/Art gallery.html
+++ b/public/Art gallery.html
@@ -9,7 +9,7 @@
     <h1>Welcome to My Art Gallery!</h1>
    
     
-    <img src="../assets/images/_Art ID_IP2_0006.jpg" 
+    <img src="../assets/images/Art ID_IP2-0006.jpg" 
     width="400" height="400" alt="abstract digital painting of temple in bali"/>
     
     <hr />
